--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,5 +1,5 @@
 .signup{
-    background-color: blueviolet;
+    background-color: #af62ee;
     font-family: 'Inknut Antiqua', serif;
     font-size: 20px;
     padding-top: 60px;
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center; 
-    margin: 10px;
+    margin: 0;
 
 }
 .text {
