--- a/src/components/Testimonial.css
+++ b/src/components/Testimonial.css
@@ -4,14 +4,14 @@
     padding-bottom: 40px;
 }
 .testimonial-section {
-    background: linear-gradient(to bottom, #ead9ee, #ffffff);
+    /* background: linear-gradient(to bottom, #ead9ee, #ffffff); */
     padding: 50px 20px;
     text-align: center;
     position: relative;
     max-width: 800px;
     margin: auto;
     border-radius: 15px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1); */
 }
 
 .testimonial-heading {
